--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: 🌐 Build Expo Web version
         run: |
-          npx expo export --platform web
+         npx expo build:web
 
 
       - name: 📤 Upload Web build as artifact
